--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <!-- Your code here! -->
-  </head>
+    <link rel="stylesheet" href="relative path to CSS file" />
+  </head><link rel="stylesheet" href="relative path to CSS file" />
 
-  <body>
-
-    <div>
+    <div></div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
